compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__assert_last.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "pub fn main() {\n  let assert x = 1\n}\n"
---
----- SOURCE CODE
pub fn main() {
  let assert x = 1
}


----- COMPILED JAVASCRIPT
export function main() {
  let x = 1n;
  return x;
}
