compiler-core/src/javascript/tests/snapshots/gleam_core__javascript__tests__functions__function_formatting2.snap
---
source: compiler-core/src/javascript/tests/functions.rs
expression: "\npub fn add(x, y) {\nx + y\n}\n\npub fn long() {\n  add(1, add(1, add(1, add(1, add(1, add(1, add(1, add(1, add(1, add(1, add(1, add(1, add(1, add(1, add(1, 1)))))))))))))))\n}"
---
----- SOURCE CODE

pub fn add(x, y) {
x + y
}

pub fn long() {
  add(1, add(1, add(1, add(1, add(1, add(1, add(1, add(1, add(1, add(1, add(1, add(1, add(1, add(1, add(1, 1)))))))))))))))
}

----- COMPILED JAVASCRIPT
export function add(x, y) {
  return x + y;
}

export function long() {
  return add(
    1n,
    add(
      1n,
      add(
        1n,
        add(
          1n,
          add(
            1n,
            add(
              1n,
              add(
                1n,
                add(
                  1n,
                  add(
                    1n,
                    add(1n, add(1n, add(1n, add(1n, add(1n, add(1n, 1n)))))),
                  ),
                ),
              ),
            ),
          ),
        ),
      ),
    ),
  );
}
